Regras_iptables/iptables.rules
# Generated by iptables-save v1.3.8 on Sat Apr  6 16:56:51 2024
*filter
:INPUT DROP [2046:97076]
:FORWARD DROP [0:0]
:OUTPUT DROP [692:322690]
-A INPUT -p tcp -m tcp --dport 6200 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 6200 -j ACCEPT 
-A INPUT -p tcp -m multiport --sports 21,80 -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 21,80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 3306 -j ACCEPT 
-A INPUT -p udp -m udp --sport 3306 -j ACCEPT 
-A INPUT -p udp -m udp --dport 3306 -j ACCEPT 
-A INPUT -p udp -m udp --dport 22 -j ACCEPT 
-A INPUT -p udp -m udp --sport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 6200 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 6200 -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 21,80 -j ACCEPT 
-A OUTPUT -p tcp -m multiport --sports 21,80 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 3306 -j ACCEPT 
-A OUTPUT -p udp -m udp --sport 3306 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 3306 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -p udp -m udp --sport 22 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 22 -j ACCEPT 
COMMIT
# Completed on Sat Apr  6 16:56:51 2024
